--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^7.6.17",
     "lord-icon-element": "^4.0.1",
     "lottie-web": "^5.10.0",
-    "framer-motion": "^7.6.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
